# Intel-Nvidia-Switch

./: .gitignore  LICENSE  README.md  gpu_status.sh  install.sh  uninstall.sh  xinitrc.conf
arch-linux-pkg/: PKGBUILD  intel-nvidia-switch.install
configs/intel/: blacklist-nvidia.conf
configs/nvidia/: 10-gpu-xrandr.sh
intel-nvidia-switch/: .gitignore  Cargo.toml
intel-nvidia-switch/configs/hybrid/: 80-nvidia-pm.rules
intel-nvidia-switch/configs/intel/: 00-remove-nvidia.rules
intel-nvidia-switch/configs/nvidia/: xinitrc.conf
intel-nvidia-switch/src/: args.rs  graphics.rs  main.rs  run_on_nvidia.rs  switch.rs
intel-nvidia-switch/src/switch/: to_hybrid.rs  to_intel.rs  to_nvidia.rs
