[package]
name = "intel-nvidia-switch"
version = "0.1.0"
edition = "2021"
authors = ["Prasad Zore <prasad.zore@outlook.com>"]
description = "A small utility to switch Intel-Nvidia Graphics on Linux"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.29", features = ["derive"]}
sh-inline = "0.4.0"
